--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{.poppins-regular {
 }
 
 .cabecalho-imagem{
-    width: 15%;
+    width: 10%;
 }
 
 .cabecalho-lista-item{
@@ -55,3 +55,21 @@ body{.poppins-regular {
 .estudante-div{ 
     text-align: center;
 }
+.estudante-titulo{
+    text-align: center;
+    padding: 50px 0;
+}
+.estudante-todos{   
+    display: grid;
+    grid-template-columns:20% 20% 20% 20% 20%;
+}
+
+.rodape{
+    background-color: black;
+    text-align: center;
+}
+.rodape-imagem{
+    height: 90px;
+    padding: 12px 0px;
+}
+
